src/css/weave.css
html {
  font-family: sans-serif;
}

body {
	margin: 0;
	color: #333;
	overflow: hidden;
}

.axis path,
.axis line {
    fill: none;
    stroke: #CCCCCC;
    shape-rendering: crispEdges;
}

.axis text {
    font-family: sans-serif;
    font-size: 11px;
}

.list-group-item:first-child {
    margin-bottom: 0;
    border-top-right-radius: 0px;
    border-top-left-radius: 0px;
}

.list-group-item:last-child {
    margin-bottom: 0;
    border-bottom-right-radius: 0px;
    border-bottom-left-radius: 0px;
}

.list-group-item {
    width: 100%;
    outline: none;
    padding: 3px 15px;
}

.list-group {
    height:100%;
    margin-bottom: 5px;
    min-width:max-content;
}

.list-group-item.active, .list-group-item.active:focus {
    z-index: 0;
    color: -webkit-text;
    background-color: #80CCFF;
    border: 1px solid #ddd;
}

.list-group-item.active:hover {
    z-index: 0;
    color: -webkit-text;
    background-color: #99D6FF;
    border: 1px solid #ddd;
}

button.list-group-item:hover {
    background-color: rgba(153, 214, 255, 0.4);
}

.btn {
    font-size: inherit;
}

.c3-tooltip td.value {
	white-space: nowrap;
}

.c3-tooltip td.name {
	white-space: nowrap;
}

ul.dropdown-menu {
    width:100%;
    overflow:auto;
}

.react-bs-container .table-container>table>tbody>tr>td, .react-bs-container .table-container>table>thead>tr>th, .react-bs-container .table-header>table>thead>tr>th .table-header-column {
    line-height: 14px;
}

.weave-table {
    font-size: inherit;
	white-space: nowrap;
}

.weave-table-header {
    background-color: #eee;
    color: -webkit-text;
}

.weave-app {
	user-select: none;
	-webkit-user-select: none;
	-moz-user-select: none;
}

.weave-tool {
	background-color: white;
}

.weave-tool-title-bar {
	visibility: hidden;
	font-size: 14;
	border-bottom: 1px solid #ffffff;
	transition: visibility 0s 0.1s, opacity 0.1s linear;
	-webkit-transition: visibility 0s 0.1s, opacity 0.1s linear;
}

.weave-tool-title-bar-hovered {
	visibility: visible;
	font-size: 14;
	background-color: #f8f8f8;
	border-bottom: 1px solid #e6e6e6;
	transition: visibility 0s 0.1s, opacity 0.1s linear;
	-webkit-transition: visibility 0s 0.1s, opacity 0.1s linear;
}

.weave-tool-title-bar-text {
    font-family: Roboto, sans-serif;
    font-size: 16px;
    font-weight: bold;
    font-style: normal;
    text-decoration: none;
	white-space: nowrap;
	text-overflow: ellipsis;
}

.weave-icon{
	padding: 5px 5px 5px 5px;
}

.weave-icon-button{
	padding: 5px;
	border-radius:4px;
	color:grey;
 }

.weave-icon-button-mouse-over{
	padding: 5px;
	border-color: grey;
	border-radius:4px;
	color:white;
	background:grey;
}



input[type="text"] {
	border: solid 1px #dcdcdc;
	transition: box-shadow 0.3s, border 0.3s;
	flex-grow: 1;
	font-size:smaller;
	height:25px;
}

input[type="text"]:focus {
	border: solid 1px rgba(153, 214, 255, 0.4);
	box-shadow: 0 0 5px 1px rgba(153, 214, 255, 0.4);
	flex-grow: 1;
	font-size:smaller;
	height:25px
}

.weave-padded-vbox > * {
	margin-top: 8px;
}
.weave-padded-vbox > *:nth-child(1) {
	margin-top: 0px;
}

.weave-padded-hbox > * {
	margin-left: 8px;
}
.weave-padded-hbox > *:nth-child(1) {
	margin-left: 0px;
}

.weave-menu {
	box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 6px, rgba(0, 0, 0, 0.12) 0px 1px 4px;
	-webkit-box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 6px, rgba(0, 0, 0, 0.12) 0px 1px 4px;
	-moz-box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 6px, rgba(0, 0, 0, 0.12) 0px 1px 4px;
	border-radius: 2px;
	background-color: #FFFFFF;
	padding-top: 5px;
	padding-bottom: 5px;
	user-select: none;
	-webkit-user-select: none;
	-moz-user-select: none;
	cursor: pointer;
	z-index: 1;
}

.weave-menubar {
	border-bottom-style: solid;
	user-select: none;
	-webkit-user-select: none;
	-moz-user-select: none;
	cursor: default;
	border-bottom-width: 2px;
	border-bottom-color: #E6E6E6;
	background-color: #F8F8F8;
	/*box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 1px, rgba(0, 0, 0, 0.12) 0px 0px 1px;
	-webkit-box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 1px, rgba(0, 0, 0, 0.12) 0px 0px 1px;
	-moz-box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 1px, rgba(0, 0, 0, 0.12) 0px 0px 1px;*/
}

.weave-menubar-item {
	padding-top: 2px;
	user-select: none;
	padding-bottom: 2px;
	padding-left: 10px;
	padding-right: 10px;
}

.weave-help-icon:hover {
	border-color: rgba(153, 214, 255, 0.4)
}

.weave-help-message {
	padding-left: 5;
	padding-right: 5;
	background-color: #FCF8E3;
	font-size: smaller;

}

.weave-menubar-item:hover {
	background-color: rgba(153, 214, 255, 0.4);
}

.weave-menubar-item:active {
	background-color: #80CCFF;
}

.weave-menubar-item-disabled {
	opacity: 0.5;
}

.weave-menubar-item-disabled:hover {
	background-color: rgba(0,0,0,0);
}

.weave-menubar-item-bold {
	font-weight: bold;
}

.weave-menuitem {
	padding-left: 20px;
	padding-right: 20px;
	background-color: rgba(255, 255, 255, 1);
	justify-content: space-between
}

.weave-menuitem:hover {
	background-color: rgba(153, 214, 255, 0.4)
}

.weave-menuitem:active {
	background-color: #80CCFF
}

.weave-menuitem-disabled {
	color: #C1C1C1;
}

.weave-menuitem-disabled:hover {
	background-color: #FFFFFF;
}

.weave-menuitem-label {
	white-space: nowrap
}

.weave-menuitem-label-padding-left {
	padding-left: 5px;
}
.weave-menuitem-label-padding-right {
	padding-right: 5px;
}

.weave-menu-divider {
	margin-top: 7px;
	margin-right: 0;
	margin-bottom: 8px;
	margin-left: 0;
	height: 1px;
	border: none;
	opacity: 1;
	background-color: rgb(224, 224, 224)
}

.weave-dialog-overlay {
	background-color: #ccc;
    opacity: .5;
}

.weave-window {
    overflow: hidden;
	border: 1px solid rgb(171, 167, 167);
	background-color: #FFFFFF;
    box-shadow: 0px 0px 20px 1px rgba(0, 0, 0, 0.2);
    -webkit-box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.2);
    -moz-box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.2);
}

/* same weave-menubar but can be customized */
.weave-window-header {
	border-bottom-style: solid;
	user-select: none;
	padding: 5px;
	-webkit-user-select: none;
	-moz-user-select: none;
	cursor: default;
	border-bottom-width: 1px;
	border-bottom-color: #E6E6E6;
	background-color: #D5D5D5;
	color: black;
	font-weight: 300;
	align-items: center;
}

.weave-window-footer {
	border-top-style: solid;
	user-select: none;
	padding: 5px;
	-webkit-user-select: none;
	-moz-user-select: none;
	cursor: default;
	border-top-width: 1px;
	border-top-color: #E6E6E6;
	background-color: #F8F8F8;
}

.weave-window-footer-input {
	margin-left: 5px;
	margin-right: 5px;
}

.rc-slider {
    position: relative;
    height: 2px;
    width: 100%;
    border-radius: 3px;
    background-color: #D0D0D0;
    box-sizing: border-box;
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    z-index: 0;
}
.rc-slider-track {
    position: absolute;
    left: 0;
    height: 2px;
    border-radius: 6px;
    background-color: #D0D0D0;
}

.rc-slider-dot {
    position: absolute;
    top: -3px;
    margin-left: 0px;
    width: 1px;
    height: 8px;
    border: 1px solid #D0D0D0;
    background-color: #fff;
    cursor: pointer;
    /* border-radius: 50%; */
    vertical-align: middle;
}

.rc-slider-dot:first-child {
    margin-left: -1px
}
.rc-slider-dot:last-child {
    margin-left: -1px;
}

.rc-slider-dot-active {
    border-color: #D0D0D0;
}

.rc-slider {
    background-color: #D0D0D0;
}

.weave-icon:hover {
	background-color: rgba(153, 214, 255, 0.4);
}

.weave-icon:active {
	background-color: #80CCFF;
}


.weave-list-view-container {
	border: 1px solid lightgrey;
	margin: 1px;
}

.weave-tree-view-icon {
    color: #808080;
}

.weave-tree-view-icon-expander {
    color: #000000;
    font-size: 60%;
}
.weave-tree-view-icon-expander.hidden-expander::before {
	content: " ";
}

.weave-tree-view {
	user-select: none;
	cursor:pointer;
	-webkit-user-select: none;
}

.weave-tree-view:hover {
	background-color: rgba(153, 214, 255, 0.4);
    cursor:pointer;
}

.weave-tree-view.selected {
	background-color: #80CCFF;
    cursor:pointer;
}

.weave-tree-view.selected:hover {
	background-color: #99D6FF;
    cursor:pointer;
}

span.weave-tree-view.open {
	
}
/* The pane for the weave-tree-view */
div.weave-tree-view {

}
.popover{
    max-width: 100%;
    max-height: 75%;
}
.weave-list-Item{
	cursor:pointer;
	background-color: #FFFFFF;
}
.weave-list-Item:hover{
	background-color: rgba(153, 214, 255, 0.4);
}
.weave-list-Item-selected{
	background-color: #80CCFF;
}
.weave-list-Item-selected:hover{
	background-color : #99D6FF;
}

.weave-tab-container {
	
}

.weave-tab-label-container {
	border-bottom: 1px solid #ddd;
}

.weave-tab-label {
	padding-left: 8;
	padding-right: 8;
	padding-top: 5;
	padding-bottom: 5;
	cursor: default;
	border: 1px solid #E6E6E6;
	background: #F8F8F8;
}

.weave-tab-label-active {
	margin-bottom: -1px; /* hide border bottom */
	border-bottom: 1px solid white;
	background: none;
}

.weave-tab-content {
	padding: 5;
}

.public_fixedDataTableCell_cellContent {
	white-space: nowrap;
}

div.table-row-probed>div>div>div>div>div {
	background-color: rgba(153, 214, 255, 0.4)
}

div.table-row-probed-selected>div>div>div>div>div {
	background-color : #99D6FF;
}

div.table-row-selected>div>div>div>div>div {
	background-color: #80CCFF;
}

.public_fixedDataTable_header, .public_fixedDataTable_header .public_fixedDataTableCell_main {
	background-color: #F8F8F8;
	background-image: linear-gradient(#F8F8F8, #F8F8F8); /* needed for override of item in fixed data table css */
}
input[type=number]::-webkit-inner-spin-button, 
input[type=number]::-webkit-outer-spin-button { 
  -webkit-appearance: none; 
  margin: 0; 
}

